@@ -18,15 +18,44 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <junit-jupiter.version>5.9.2</junit-jupiter.version>
+    <maven-compiler.version>3.10.1</maven-compiler.version>
+    <maven-failsafe.version>3.0.0-M7</maven-failsafe.version>
+    <maven-surefire.version>3.0.0-M7</maven-surefire.version>
     <lib.module.name>com.ecwid.dev.deep.copy</lib.module.name>
   </properties>
-  
+
+  <dependencies>
+    <!-- ... -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- ... -->
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>${maven-compiler.version}</version>
+      </plugin>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire.version}</version>
+        <configuration>
+          <argLine>
+            --add-opens=java.base/java.util=${lib.module.name}
+            --add-opens=java.base/java.lang=${lib.module.name}
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>${maven-failsafe.version}</version>
       </plugin>
     </plugins>
   </build>
